--- a/index.css
+++ b/index.css
@@ -26,6 +26,13 @@
 @import url(./blocks/catalog/__about/catalog__about.css);
 @import url(./blocks/catalog/__about-link/catalog__about-link.css);
 
+@import url(./blocks/gallery/__container/gallery__container.css);
+@import url(./blocks/gallery/__image/gallery__image.css);
+@import url(./blocks/gallery/__info/gallery__info.css);
+@import url(./blocks/gallery/__description/gallery__description.css);
+@import url(./blocks/gallery/__button/gallery__button.css);
+@import url(./blocks/gallery/__navigation/gallery__navigation.css);
+
 @import url(./blocks/news/__container/news__container.css);
 @import url(./blocks/news/__title/news__title.css);
 @import url(./blocks/news/__description/news__description.css);
