--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url(./vendor/fonts/font.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__nav/header__nav.css);
