--- a/index.css
+++ b/index.css
@@ -27,7 +27,10 @@
 @import url(./blocks/catalog/__about/catalog__about.css);
 @import url(./blocks/catalog/__about-link/catalog__about-link.css);
 
+@import url(./blocks/gallery/gallery.css);
 @import url(./blocks/gallery/__container/gallery__container.css);
+@import url(./blocks/gallery/__lines/gallery__lines.css);
+@import url(./blocks/gallery/__back/gallery__back.css);
 @import url(./blocks/gallery/__image/gallery__image.css);
 @import url(./blocks/gallery/__info/gallery__info.css);
 @import url(./blocks/gallery/__description/gallery__description.css);
