--- a/blocks/header/__nav/header__nav.css
+++ b/blocks/header/__nav/header__nav.css
@@ -8,4 +8,11 @@
   font-size: 14px;
   line-height: 16px;
   color: #555248;
+  padding: 0;
+}
+
+@media screen and (max-width: 500px){
+  .header__nav {
+    gap: 30px;
+  }
 }
