--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,15 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width: 1240px){
+  .header {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 740px){
+  .header {
+    flex-direction: column;
+  }
+}
