--- a/blocks/footer/__container/footer__container.css
+++ b/blocks/footer/__container/footer__container.css
@@ -5,3 +5,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1040px){
+  .footer__container {
+    padding: 37px 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+}
