--- a/blocks/footer/__info/footer__info.css
+++ b/blocks/footer/__info/footer__info.css
@@ -10,3 +10,9 @@
   line-height: 14px;
   color: rgba(255, 255, 255, 0.75);
 }
+
+@media screen and (max-width: 1040px){
+  .footer__info {
+    text-align: center;
+  }
+}
