--- a/blocks/footer/__title/footer__title.css
+++ b/blocks/footer/__title/footer__title.css
@@ -10,3 +10,9 @@
   text-transform: uppercase;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 1040px){
+  .footer__title {
+    margin-bottom: 16px;
+  }
+}
