--- a/blocks/hero/__button/hero__button.css
+++ b/blocks/hero/__button/hero__button.css
@@ -12,3 +12,9 @@
   text-transform: uppercase;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 860px){
+  .hero__button {
+    margin-top: 30px;
+  }
+}
