--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -4,3 +4,10 @@
   margin: 0 auto 0;
   display: flex;
 }
+
+@media screen and (max-width: 860px){
+  .hero__info {
+    margin: 60px auto 0;
+    text-align: center;
+  }
+}
