--- a/blocks/catalog/__block/catalog__block.css
+++ b/blocks/catalog/__block/catalog__block.css
@@ -4,3 +4,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1200px){
+  .catalog__block {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
