--- a/blocks/catalog/__container/catalog__container.css
+++ b/blocks/catalog/__container/catalog__container.css
@@ -5,3 +5,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 1200px){
+  .catalog__container {
+    margin: 0 auto 36px;
+  }
+}
