--- a/blocks/gallery/__container/gallery__container.css
+++ b/blocks/gallery/__container/gallery__container.css
@@ -5,3 +5,9 @@
   gap: 70px;
   align-items: center;
 }
+
+@media screen and (max-width: 1100px){
+  .gallery__container {
+    flex-direction: column;
+  }
+}
