--- a/blocks/gallery/__description/gallery__description.css
+++ b/blocks/gallery/__description/gallery__description.css
@@ -8,3 +8,9 @@
   line-height: 150%;
   color: #444240;
 }
+
+@media screen and (max-width: 1100px){
+  .gallery__description {
+    text-align: center;
+  }
+}
