--- a/blocks/gallery/__image/gallery__image.css
+++ b/blocks/gallery/__image/gallery__image.css
@@ -4,3 +4,11 @@
   height: 414px;
   position: relative;
 }
+
+@media screen and (max-width: 800px){
+  .gallery__image {
+    width: 320px;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
