--- a/blocks/gallery/__info/gallery__info.css
+++ b/blocks/gallery/__info/gallery__info.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   max-width: 376px;
 }
+
+@media screen and (max-width: 1100px){
+  .gallery__info {
+    align-items: center;
+  }
+}
