--- a/blocks/news/__illustrations/news__illustrations.css
+++ b/blocks/news/__illustrations/news__illustrations.css
@@ -22,3 +22,9 @@
   grid-row: 1/3;
   grid-column: 2/3;
 }
+
+@media screen and (max-width: 1280px){
+  .news__illustrations {
+    display: none;
+  }
+}
