--- a/blocks/header/__icons/header__icons.css
+++ b/blocks/header/__icons/header__icons.css
@@ -3,6 +3,10 @@
   gap: 15px;
 }
 
+.header__icons:hover {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 500px){
   .header__icons {
     display: none;
